GUI: move "default BCP 47 editing mode" preferences to "Language" tab

--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -255,19 +255,6 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="label_21">
-               <property name="text">
-                <string>Default IETF BCP 47 language editing &amp;mode:</string>
-               </property>
-               <property name="buddy">
-                <cstring>cbGuiBCP47LanguageEditingMode</cstring>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QComboBox" name="cbGuiBCP47LanguageEditingMode"/>
-             </item>
             </layout>
            </item>
            <item>
@@ -448,6 +435,19 @@
            <item>
             <layout class="QGridLayout" name="gridLayout_11">
              <item row="0" column="0">
+              <widget class="QLabel" name="label_26">
+               <property name="text">
+                <string>Default IETF BCP 47 language editing &amp;mode:</string>
+               </property>
+               <property name="buddy">
+                <cstring>cbGuiBCP47LanguageEditingMode</cstring>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="cbGuiBCP47LanguageEditingMode"/>
+             </item>
+             <item row="1" column="0">
               <widget class="QLabel" name="label_11">
                <property name="text">
                 <string>IETF BCP 47 &amp;normalization mode:</string>
@@ -457,7 +457,7 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
+             <item row="1" column="1">
               <widget class="QComboBox" name="cbGuiBCP47NormalizationMode">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -2761,6 +2761,8 @@
   <tabstop>cbGuiWarnBeforeOverwriting</tabstop>
   <tabstop>tbOftenUsedXYZ</tabstop>
   <tabstop>tbOftenUsedLanguages</tabstop>
+  <tabstop>cbGuiBCP47LanguageEditingMode</tabstop>
+  <tabstop>cbGuiBCP47NormalizationMode</tabstop>
   <tabstop>cbUseISO639_3Languages</tabstop>
   <tabstop>cbOftenUsedLanguagesOnly</tabstop>
   <tabstop>tbOftenUsedRegions</tabstop>
